<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="155dp"
        android:layout_height="22dp"
        android:layout_marginTop="44dp"
        android:text="@string/precio_gasolina"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_marginTop="35dp"
        android:text="@string/km_realizados"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-- ImageView para el ícono -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitStart"
        android:contentDescription="@string/icon_description"

        android:src="@drawable/gascalculatorlogo"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView para "Mi aplicación" -->

    <!-- TextView para descripción -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="97dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="220dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />



    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="60dp"


        android:layout_marginTop="20dp"
        android:text="@string/button1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        android:text="@string/choose_passangers"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <!-- EditText para introducir km realizados -->
    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:importantForAutofill="no"
        android:ems="10"

        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <!-- EditText para introducir el precio de la gasolina -->
    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:autofillHints="price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <!-- TextView para "Litros cada 100km(L/100km)" -->

    <!-- EditText para introducir el consumo por cada 100km -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="186dp"
        android:layout_height="22dp"
        android:layout_marginTop="44dp"
        android:text="@string/consumption_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextNumberDecimal2"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="191dp"
        android:layout_height="44dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="176dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:visibility="visible"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7082123988966000/7183719082"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
    <!--app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->

